--- a/product_hunt_clone/templates/base.html
+++ b/product_hunt_clone/templates/base.html
@@ -32,7 +32,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
-            
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'create' %}">Create Product</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}" onclick="">Logout</a>
             </li>
