--- a/products/templates/products/details.html
+++ b/products/templates/products/details.html
@@ -1,7 +1,44 @@
 {% extends 'base.html' %}
 
-
-
 {% block block-content %}
-Details
-{% endblock block-content %}
+<br />
+<div class="row">
+  <div class="col-2">
+    <img src="{{ product.icon.url }}" class="img-fluid" />
+    </div>
+  <div class="col-10">
+    <a href="{{ product.url }}"><h1>{{ product.title }}</h1>
+      <h6>{{ product.publishing_date_pretty }}</h6>
+    </div>
+</div>
+<br />
+
+<div class="row">
+  <div class="col-8">
+    <img src="{{ product.image.url }}" height=500 width=700 class="img-fluid" />
+    </div>
+    <div class="col-4">
+    <a href="javascript:{document.getElementById('upvote').submit()}"><button class="btn btn-primary btn-lg btn-block"><span class="oi oi-caret-top"></span> Upvote {{ product.votes }}</button></a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-4 pt-2">
+    <h4>Author: {{ product.author.username }}</h4>
+    </div>
+</div>
+
+<div class="row">
+  <div class="col-4">
+    <p>{{ product.description }}</p>
+    </div>
+</div>
+<br />
+<br />
+
+<form id="upvote" method="POST" action="{% url 'upvote' product.id %}">
+  {% csrf_token %}
+  <input type="hidden">
+</form>
+
+{% endblock%}
